--- a/EnumExtend/EnumExtend.csproj
+++ b/EnumExtend/EnumExtend.csproj
@@ -11,10 +11,13 @@
 
 	<PackageDescription>Easily usable with Enum</PackageDescription>
 	<RepositoryUrl>https://github.com/elky84/EnumExtend</RepositoryUrl>
+
+	<PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
 
   <ItemGroup>
-	  <None Include="..\README.md" Pack="true" PackagePath="\" />
+	<None Include="..\LICENSE" Pack="true" PackagePath="\"/>
+	<None Include="..\README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
 
   <ItemGroup>
