--- a/EnumExtend/EnumExtend.csproj
+++ b/EnumExtend/EnumExtend.csproj
@@ -1,10 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
 
 		<PackageId>EnumExtend</PackageId>
-		<Version>1.0.5</Version>
+		<Version>1.0.6</Version>
 		<Authors>elky</Authors>
 		<Company>elky</Company>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
